# crewster

./: Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/crewster/: SKILL.md
.claude/skills/hpc/: SKILL.md
src/crewster/: __init__.py  cli.py  config.py  job.py  main.py  run.py  scheduler.py  ssh.py
src/hpc/: cli.py  config.py  job.py  main.py  scheduler.py  ssh.py
tests/: conftest.py  rejection_fixtures.py  test_cli.py  test_config.py  test_git_sync.py  test_integration.py  test_job.py  test_run.py  test_scheduler.py  test_ssh.py  test_sync.py  test_wait.py
