[project]
name = "crewster"
version = "0.7.0"
description = "A CLI that makes a remote HPC cluster feel local — sync your working tree, run a quick job (Slurm/PJM), pull results."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "GitPython>=3.1.0",
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "tomli-w>=1.2.0",
  "typer>=0.9.0",
]

[project.scripts]
crewster = "crewster.main:main"

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pyright>=1.1.0",
  "pytest>=8.0.0",
  "python-semantic-release>=9.0.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewster"]

[tool.pytest.ini_options]
# Make tests/ an explicit import root so helper modules such as
# tests/rejection_fixtures.py resolve regardless of pytest's import mode
# (the default prepend mode inserts tests/ implicitly; importlib does not).
pythonpath = ["tests"]
testpaths = ["tests"]
